# iqtree2

docker/: Dockerfile  README.md  entrypoint.sh
python/cli/: cli.py  functions.md  general_options.py  iqtree2_functions.py
python/trials/: readme.md
python/trials/Cpp_lib/: CMakeLists.txt  README.md  mock_iqtree.cpp  mock_iqtree.h
python/trials/cython_app/: cython_wrapper.cp310-win_amd64.pyd  cython_wrapper.cpp  cython_wrapper.pyx  requirements.txt  setup.py
python/trials/cython_app/cython_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/trials/cython_app/tests/: test_mock_iqtree_cython.py
python/trials/pybind11_app/: README.md  pybind_wrapper.cp310-win_amd64.pyd  pybind_wrapper.cpp  setup.py
python/trials/pybind11_app/pybind_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/trials/pybind11_app/tests/: test_count_pybind11.py
